--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ $main-font: 'Roboto', sans-serif;
 $body-color: #f5f9fc;
 $text-light: #ebedf0;
 $text-dark: #242526;
-$primary-color:gray;
+$primary-color:blue;
 $head-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
 $foot-shadow: 0px -5px 15px rgba(0, 0, 0, 0.5);
 $card-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -347,18 +347,6 @@ svg {
         b {
             margin-left: 0.6rem;
             font-size: 1.4rem;
-        }
-    }
-
-    .checkout_btn {
-        background-color: $text-light;
-        color: #000;
-        font-size: 1rem;
-        padding: 0.4rem 0.8rem;
-
-        &[disabled] {
-            opacity: 0.5;
-            cursor: not-allowed;
         }
     }
 }
